# task-manager

./: Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: test-lint-check.yml
task_manager/: load_data.py  mixins.py  settings.py  urls.py  views.py
task_manager/apps/labels/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/apps/labels/migrations/: 0001_initial.py
task_manager/apps/statuses/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/apps/statuses/migrations/: 0001_initial.py
task_manager/apps/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/apps/tasks/migrations/: 0001_initial.py  (+1 more)
task_manager/apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
task_manager/fixtures/: labels.json  statuses.json  tasks.json  test_labels.json  test_statuses.json  test_tasks.json  test_users.json  users.json
task_manager/management/commands/: create_superuser.py
task_manager/templates/: 404.html  base_template.html  index.html  login.html  navbar.html
task_manager/templates/labels/: create.html  delete.html  index.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  list.html  task_info.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  list.html  update.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
(+4 files in other folders)
