[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Yuriy Totyshev <freewan@desktop>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "task_manager" }
]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.9"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
flake8 = "^7.0.0"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"
django-filter = "^23.5"
coverage = "^7.4.2"
rollbar = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
